Fix text alignment on button

--- a/client/src/css/Home.css
+++ b/client/src/css/Home.css
@@ -118,3 +118,7 @@
   font-weight: 600;
   color: #212529;
 }
+
+.ant-btn > span {
+  margin-top: 0.15em;
+}
